finalized game, refactored classes